--- a/app/src/main/res/layout/activity_admin_add_student.xml
+++ b/app/src/main/res/layout/activity_admin_add_student.xml
@@ -4,25 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserActivitys.AdminActivitys.addStudent.AdminAddStudent">
+    tools:context=".UserActivitys.AdminActivitys.AddingStudent.AdminAddStudent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/AppBar"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.AndroidAttendance.AppBarOverlay"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="center"
+        android:background="?attr/colorPrimary"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/Theme.AndroidAttendance.PopupOverlay"
+        app:title="Attendance Manager" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.AndroidAttendance.PopupOverlay"
-            app:title="Attendance Manager"
-            android:layout_gravity="center"/>
-
-    </com.google.android.material.appbar.AppBarLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -98,7 +91,8 @@
             android:text="Add"
             android:textColor="#ffff"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:onClick="addStudents"/>
 
         <Button
             android:id="@+id/deleteButton"
@@ -113,7 +107,8 @@
             android:text="remove from course"
             android:textColor="#ffff"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:onClick="deleteStudents"/>
 
 
 
