--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
     tools:context=".StartActivitys.MainActivity"
     android:layout_centerHorizontal="true">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="center"
+        android:background="?attr/colorPrimary"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/Theme.AndroidAttendance.PopupOverlay"
+        app:title="Attendance Manager" />
+
     <Button
         android:id="@+id/loginButton"
         android:layout_width="wrap_content"
