--- a/app/src/main/res/layout/activity_admin_add_student.xml
+++ b/app/src/main/res/layout/activity_admin_add_student.xml
@@ -19,7 +19,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".UserActivitys.AdminActivitys.RegisterUser">
+        tools:context=".UserActivitys.AdminActivitys.RegisteringTeacher.RegisterUser">
 
         <EditText
 
