--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserActivitys.AdminActivitys.RegisterUser">
+    tools:context=".UserActivitys.AdminActivitys.RegisteringTeacher.RegisterUser">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -19,7 +19,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".UserActivitys.AdminActivitys.RegisterUser">
+        tools:context=".UserActivitys.AdminActivitys.RegisteringTeacher.RegisterUser">
 
         <EditText
 
