--- a/app/src/main/res/layout/activity_show_dai.xml
+++ b/app/src/main/res/layout/activity_show_dai.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserActivitys.AdminActivitys.CheckingCourse.ADS.ShowAdsActivity">
+    tools:context=".UserActivitys.AdminActivitys.CheckingCourse.DAI.ShowDaiActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -26,4 +27,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="55dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
