--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -16,13 +16,87 @@
         app:popupTheme="@style/Theme.AndroidAttendance.PopupOverlay"
         app:title="Attendance Manager" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/vialogo_main"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:gravity="right"
+            android:paddingRight="10dp"
+            android:text="Hello"
+            android:textSize="30sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/welcomingUser"
+            android:layout_width="200dp"
+            android:layout_height="36dp"
+            android:gravity="left"
+            android:paddingLeft="10dp"
+            android:text="User"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/ANDbutton"
+        android:layout_width="215dp"
+        android:layout_height="300dp"
+        android:background="@drawable/android"
+        android:onClick="android"
+        android:text="AND"
+        app:layout_constraintBottom_toTopOf="@+id/DAIbutton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <ImageButton
+        android:id="@+id/ESWbutton"
+        android:layout_width="187dp"
+        android:layout_height="300dp"
+        android:background="@drawable/esw"
+        android:onClick="embedded"
+        android:text="ESW"
+        app:layout_constraintBottom_toTopOf="@+id/ADSbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+        <ImageButton
+            android:id="@+id/DAIbutton"
+            android:layout_width="215dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginBottom="1dp"
+            android:background="@drawable/dw"
+            android:onClick="dataWarehousing"
+            android:text="DAI"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageButton
+            android:id="@+id/ADSbutton"
+            android:layout_width="187dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/ads"
+            android:onClick="algorithm"
+            android:text="ADS"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
